# CameraChamber

./: .gitmodules  AbstractCamera.cpp  AbstractCamera.h  AdcAmplitudeCalibrationData.h  BeamPathProfileDialog.cpp  BeamPathProfileDialog.h  BeamPathProfileDialog.ui  BeamPathTableModel.cpp  BeamPathTableModel.h  CMakeLists.txt  Camera2.cpp  Camera2.h  CameraProfilesDialog.cpp  CameraProfilesDialog.h  CameraProfilesDialog.ui  CameraSpillsListModel.cpp  CameraSpillsListModel.h  CameraUtils.cpp  CameraUtils.h  Cameras.json  ChannelInfoTableModel.cpp  ChannelInfoTableModel.h  FullCamera.cpp  FullCamera.h  FullCamera3.cpp  FullCamera3.h  FullCamera4.cpp  FullCamera4.h  HttpServerDialog.cpp  HttpServerDialog.h  HttpServerDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md  RootFileCameraProfilesDialog.cpp  RootFileCameraProfilesDialog.h  RootFileCameraProfilesDialog.ui  SettingsDialog.cpp  SettingsDialog.h  (+6 more)
C26AIC01/: Chip1.11.json  Chip1.2.json  Chip1.3.json  Chip1.4.json  Chip1.5.json  Chip1.8.json  Chip2.1.json  Chip2.2.json  Chip2.4.json  Chip2.5.json  Chip2.6.json  Chip2.7.json  ChipsPosition.json
C26AIC02/: Chip1.1.json  Chip1.10.json  Chip1.12.json  Chip1.6.json  Chip1.7.json  Chip1.9.json  Chip2.10.json  Chip2.3.json  Chip2.8.json  Chip2.9.json  ChipX.X.json  ChipsPosition.json
C26AIC03/: Chip3.1.json  Chip3.10.json  Chip3.11.json  Chip3.12.json  Chip3.13.json  Chip3.14.json  Chip3.2.json  Chip3.3.json  Chip3.4.json  Chip3.5.json  Chip3.7.json  Chip3.8.json  ChipX.X.json  ChipsPosition.json
C26AIC04/: Chip3.35.json  Chip3.36.json  Chip3.37.json  Chip3.38.json  Chip3.39.json  Chip3.40.json  Chip3.41.json  Chip3.42.json  Chip3.43.json  Chip3.44.json  Chip3.45.json  Chip3.46.json  ChipX.X.json  ChipsPosition.json
C26AIC05/: Chip3.23.json  Chip3.24.json  Chip3.25.json  Chip3.26.json  Chip3.27.json  Chip3.28.json  Chip3.29.json  Chip3.30.json  Chip3.31.json  Chip3.32.json  Chip3.33.json  Chip3.34.json  ChipsPosition.json
C26AIC06/: ChipsPosition.json
CH26AIC02/: Chip1.7.json  Chip2.10.json  Chip2.3.json  Chip2.9.json
CH26AIC03/: Chip3.1.json  Chip3.10.json  Chip3.11.json  Chip3.14.json  Chip3.5.json  Chip3.8.json  ChipsPosition.json
